mengubah warna pada website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Reynald Sahala Tua</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#e2fff0"
+          fill="#f1f1eb"
           fill-opacity="1"
           d="M0,0L48,26.7C96,53,192,107,288,117.3C384,128,480,96,576,122.7C672,149,768,235,864,240C960,245,1056,171,1152,128C1248,85,1344,75,1392,69.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
@@ -173,7 +173,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#198754"
+          fill="#212529"
           fill-opacity="1"
           d="M0,160L48,138.7C96,117,192,75,288,96C384,117,480,203,576,208C672,213,768,139,864,138.7C960,139,1056,213,1152,224C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
@@ -182,7 +182,7 @@
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="bg-success text-white text-center pb-5">
+    <footer class="bg-dark text-white text-center pb-5">
       <p>Created with <i class="bi bi-suit-heart-fill text-warning"></i> by <a href="https://www.instagram.com/reynaldsts/" class="text-white fw-bold">Reynald Sahala Tua</a></p>
     </footer>
     <!-- Akhir Footer -->
